# 03-rag-privacy-guard

./: .gitignore  Dockerfile  Dockerfile.worker  README.md  alembic.ini  docker-compose.yaml  index.html  main.py  params.yaml  pyproject.toml  requirements.txt  run.py  template.py
.github/workflows/: ci.yaml  deploy.yml
assets/: index-D7r8UDk9.js  index-O3NAXLZ0.js  index-TMWuvE9P.css  index-TkVKx1XB.css
frontend/: README.md  index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AppContext.tsx  AppShell.tsx  EmptyState.tsx  ErrorPanel.tsx  LoadingState.tsx  MetricCard.tsx  Sidebar.tsx  StatusBadge.tsx  TopBar.tsx
frontend/src/pages/: AuthPage.tsx  Dashboard.tsx  Ingestion.tsx  QueryConsole.tsx  SecurityEvents.tsx  Settings.tsx
frontend/src/types/: index.ts
k8s/: deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
pytest_temp/test_missing_encryption_key_qu0/: test_doc_secrets_detected.meta.json
pytest_temp/test_quarantine_encrypts_raw_c0/: doc1_secrets.enc
pytest_temp/test_secret_scanner_quarantine0/: 823be5a6b28d7fd8_secrets_detected.enc
research/: prototypes.ipynb
src/aegisVault/: __init__.py  worker.py
src/aegisVault/access/: __init__.py  acl_filter.py  rbac.py
src/aegisVault/app/: deps.py  main.py  metrics.py
src/aegisVault/app/routers/: auth.py  events.py  ingest.py  query.py
src/aegisVault/app/static/css/: style.css
src/aegisVault/app/templates/: index.html
src/aegisVault/components/: __init__.py
src/aegisVault/config/: __init__.py  config.yaml  manager.py
src/aegisVault/constants/: __init__.py
src/aegisVault/db/: __init__.py  db_session.py  session.py
src/aegisVault/db/alembic/: env.py
src/aegisVault/db/alembic/versions/: d9ab4ac0af5b_001_initial_schema.py
src/aegisVault/db/migrations/: 001_schema.sql
src/aegisVault/entity/: __init__.py  artifact_entity.py  config_entity.py
src/aegisVault/guards/: __init__.py  graph_boundary.py  ingestion_scrubber.py  output_sanitizer.py  privacy_math.py  semantic_router.py
src/aegisVault/pipeline/: __init__.py  inference_pipeline.py  ingestion_pipeline.py
src/aegisVault/utils/: __init__.py  common.py
tests/: test_auth.py  test_dp_embedder.py  test_graph_boundary.py  test_health.py  test_ingest_router.py  test_ingestion_scrubber.py  test_rate_limiting.py  test_security_controls.py  test_semantic_router_llama_guard.py
