[project]
name = "03-rag-privacy-guard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.1",
    "celery>=5.6.3",
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "neo4j>=6.2.0",
    "numpy>=2.4.4",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "redis>=7.4.0",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.49",
    "tiktoken>=0.12.0",
    "torch>=2.11.0",
    "transformers>=5.8.0",
    "uvicorn[standard]>=0.46.0",
]
