[project]
name = "aegis-vault-rag-privacy-guard"
version = "0.1.0"
description = "AegisVault: a privacy-guarded RAG API with ingestion scrubbing, RBAC, graph boundaries, and audit logging."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "black>=26.3.1",
    "celery>=5.6.3",
    "chromadb>=1.5.9",
    "colorlog>=6.10.1",
    "cryptography>=48.0.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain>=1.2.18",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.0.0",
    "matplotlib>=3.10.9",
    "neo4j>=6.2.0",
    "numpy>=2.4.4",
    "openai>=2.0.0",
    "opentelemetry-exporter-otlp>=1.41.1",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "opentelemetry-sdk>=1.41.1",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic>=2.13.4",
    "pymysql>=1.1.3",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "python-json-logger>=4.1.0",
    "python-multipart>=0.0.27",
    "pyyaml>=6.0.3",
    "redis>=7.4.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.1",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "torch>=2.11.0",
    "transformers>=5.8.0",
    "uvicorn[standard]>=0.46.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
